view on github icon

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
-<h1>Simulate the growth of a snowflake!</h1>
-
 <iframe height="400" width="100%" frameborder="no" src="https://liamblake.shinyapps.io/snowflake/"> </iframe>
+
+<a href="https://github.com/LiamBlake/snowflake" class="btn">
+  <img border="0" alt="View on Github" src="assets/github_mark.png" width="32" height="32"></a>
