Update iframe height

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<iframe style="margin-bottom: 2.5em;" height="400" width="100%" frameborder="no" src="https://liamblake.shinyapps.io/snowflake/"> </iframe>
+<iframe style="margin-bottom: 2.5em;" height="100%" width="100%" frameborder="no" src="https://liamblake.shinyapps.io/snowflake/"> </iframe>
 
 <a href="https://github.com/LiamBlake/snowflake" class="btn">
   <img border="0" alt="View on Github" src="assets/github_mark.png" width="32" height="32"></a>
