Add WIP text to page

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+CURRENTLY A WORK IN PROGRESS!
+
 <iframe style="margin-bottom: 2.5em;" height="100%" width="100%" frameborder="no" src="https://liamblake.shinyapps.io/snowflake/"> </iframe>
 
 <a href="https://github.com/LiamBlake/snowflake" class="btn">
